--- a/css/style.css
+++ b/css/style.css
@@ -72,9 +72,12 @@
   left: 50%;
   min-width: 800px;
   min-height: 550px;
+  transform: translate(-50%, -50%) scale(1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1) opacity;
+  opacity: 1;
+  border-radius: -4px;
+  background: #FFF;
   padding: 15px;
-  background-color: skyblue;
-  transform: translate(-50%, -50%);
 }
 
 .close__icon {
